# gs-typeforms

./: .gitignore  CLAUDE.md  README.md  docker-compose.override.yml  docker-compose.yml  greenspace-software-developer-interview.md  gs-requirements.md
api/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
api/apps/rest-api/: pyproject.toml
api/apps/rest-api/src/db/: README.md
api/apps/rest-api/src/logs/: README.md
api/apps/rest-api/src/rest_api/: __init__.py  config.py  container.py  logging_config.py
api/apps/rest-api/src/rest_api/routers/: field_definition_routes.py  form_routes.py  response_routes.py
docs/: api.md  ui.md
ui/: Dockerfile  package-lock.json  package.json
ui/src/: main.tsx  routes.tsx
ui/src/api/: client.ts  fieldConfigMappers.ts  fieldDefinitions.ts  forms.ts  responses.ts  useFieldDefinitions.ts  useForm.ts  useForms.ts  useParticipateForm.ts  useResponse.ts  useSaveForm.ts
ui/src/components/: ErrorAlert.tsx  RespondentBadge.tsx
ui/src/pages/FormBuilder/: BuilderTopBar.tsx  ConfigPanel.tsx  FieldCard.tsx  FieldPalette.tsx  FieldPreview.tsx  FormBuilderPage.tsx  FormCanvas.tsx  fieldTypeMeta.ts  formField.ts
ui/src/pages/FormResults/: FormResultsPage.tsx
ui/src/pages/FormsList/: FormsListPage.tsx
ui/src/pages/Layout/: LayoutPage.tsx
ui/src/pages/Participate/: FieldInput.tsx  ParticipatePage.tsx
ui/src/types/: fieldDefinition.ts  form.ts  response.ts
ui/src/utils/: formatDate.ts  useLocalStorage.ts  useRespondentId.ts
