[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = []

[tool.uv.workspace]
members = [
    "apps/rest-api",
    "packages/common",
    "packages/typeforms-domain-dataaccess",
    "packages/typeforms-domain",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "ty>=0.0.31",
]
