[project]
name = "rest-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nathan Blok", email = "ndblok@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "dependency-injector>=4.49.0",
    "fastapi[standard]>=0.136.0",
    "pydantic>=2.13.2",
    "typeforms-domain",
    "typeforms-dataaccess",
    "rich>=15.0.0",
    "pydantic-settings>=2.13.1",
]

[project.scripts]
rest-api = "rest_api:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
typeforms-domain = { workspace = true }
typeforms-dataaccess = { workspace = true }
